--- a/src/app/admin-login/admin-login.component.css
+++ b/src/app/admin-login/admin-login.component.css
@@ -6,9 +6,7 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color: #85FFBD;
-background-image: linear-gradient(180deg, #85FFBD 0%, #FFFB7D 100%);
-
+background-color: black;
 }
 
 .container {
