--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -6,7 +6,9 @@
 
 body {
   font-family: "Poppins", sans-serif;
-  background-color:black;
+  background-color: #85FFBD;
+background-image: linear-gradient(0deg, #85FFBD 0%, #FFFB7D 100%);
+
   
 }
 
